--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node_modules/.bin/mocha",
     "start": "node ./main.js"
   },
   "repository": {
@@ -33,5 +33,8 @@
     "ssh2": "^0.5.5",
     "websocket-json-stream": "0.0.3",
     "ws": "^3.1.0"
+  },
+  "devDependencies": {
+    "mocha": "^3.5.3"
   }
 }
