--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/chanhyeong/box-api#readme",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.1",
     "connect-flash": "^0.1.1",
     "express": "^4.15.4",
     "express-session": "^1.15.5",
     "mongodb": "^2.2.31",
+    "mysql": "^2.14.1",
     "ot-text": "^1.0.1",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
