--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ws": "^3.1.0"
   },
   "devDependencies": {
-    "mocha": "^3.5.3"
+    "mocha": "^3.5.3",
+    "node-mocks-http": "^1.6.4"
   }
 }
