--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "body-parser": "^1.18.1",
     "connect-flash": "^0.1.1",
     "express": "^4.15.4",
+    "express-jwt": "^5.3.0",
     "express-session": "^1.15.5",
+    "jsonwebtoken": "^8.0.1",
+    "lodash": "^4.17.4",
     "mongodb": "^2.2.31",
     "mysql": "^2.14.1",
     "ot-text": "^1.0.1",
