--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "box-api",
+  "name": "coco-api",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -40,7 +40,5 @@
     "ws": "^3.1.0"
   },
   "devDependencies": {
-    "mocha": "^3.5.3",
-    "node-mocks-http": "^1.6.4"
   }
 }
