--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.15.4",
     "express-jwt": "^5.3.0",
     "jsonwebtoken": "^8.1.0",
+    "knex": "^0.14.2",
     "mongodb": "^2.2.31",
     "mysql": "^2.14.1",
     "ot-text": "^1.0.1",
