--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node ./app.js",
-    "test": "node_modules/.bin/mocha $(find ./ -name '*.spec.js') --recursive -w"
+    "test": "node_modules/.bin/mocha $(find ./test -name '*.spec.js')"
   },
   "repository": {
     "type": "git",
